--- a/Projects/ToDoList/css/style.css
+++ b/Projects/ToDoList/css/style.css
@@ -4,11 +4,25 @@ body{
     font-family: monospace;
 }
 .project{
-    height: 1000px;
     width: 1000px;
     margin: 0px auto;
     border: 1px solid red;
     position: relative;
+    min-height: 1000px;
+}
+.banner{
+    position: sticky;
+    top: 0px;
+    height: 50px;
+}
+header div{
+    font-size: 30px;
+    text-align: center;
+    z-index: 9999;
+    background-color: #ffffff;
+    border-bottom: 2px solid gray;
+    margin: 0px auto;
+    padding: 5px 0px;
 }
 .line{
     border: 1px solid green;
@@ -20,11 +34,12 @@ body{
     margin: 20px 0px 0px 191px;
 }
 .block{
-    width: 500px;
+    width: 610px;
     border: 1px solid green;
     margin: 0px auto;
     margin-bottom: 10px;
     padding-bottom: 12px;
+    border-bottom: 1px solid #8c8c8c;
 }
 .title{
     width: 200px;
@@ -35,11 +50,10 @@ body{
 }
 img.add{
     border: 1px solid blue;
-    margin: 0px auto;
     width: 50px;
-    position: absolute;
-    top: 533px;
-    right: 30px;
+    position: sticky;
+    top: 80%;
+    left: 1310px;
 }
 input.remove{
     border: 1px solid blue;  
@@ -65,6 +79,72 @@ textarea:active{
     border: none;
     border-bottom: 2px solid green;
 }
-.green{
-    background-color: green;
+
+/* Customize the label (the container) */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 45px;
+    left: 212px;
+    height: 32px;
+    width: 32px;
+    background-color: #eee;
+    border-radius: 18px;
 }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 10px;
+    top: 6px;
+    width: 9px;
+    height: 13px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
