--- a/Projects/daynight/css/style.css
+++ b/Projects/daynight/css/style.css
@@ -5,7 +5,7 @@ body{
 }
 .daynight{
     width: 100%;
-    height: 50px;
+    height: 90px;
     margin: 0px auto;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     background-color: black;
@@ -16,6 +16,7 @@ body{
     margin: 0px auto;
     width: 1200px;
     padding-top: 10px;
+    height: 30px;
 }
 .time{
     margin-left: 76px;
@@ -30,4 +31,13 @@ body{
     font-size: 19px;
     float: left;
 }
-
+p{
+    margin: 0px;
+}
+#timer{
+    margin-left: 5px;
+}
+.time_now{
+    padding-left: 60px;
+    padding-top: 4px;
+}
